# cmake-c-wisp

./: CMakeLists.txt
